# Humetrics_OnOffBed

./: .gitignore  CNN-LSTM.py  README.md  README_outlier_pdf.md  SPS2021PA000369_20241119_04_20241120_04.txt  SPS2021PA000369_20241121_04_20241122_04.txt  SPS2022PA000299_20241119_04_20241120_04.txt  compare_data.py  elastic_data_loader.py  file_cleaner.py  file_cleaner_README.md  filelist.txt  localrawviewer1217.py  localrawviewer1217_elastic.py  merge_predictions.py  onoff_bed_0203.py  onoff_bed_0803-H.py  outlier_pdf_generator.py  prediction.py  pyproject.toml  test_comparison.py  test_workflow.py
archive/: onoff_bed_0803.py
logs/cnn-lstm/: checkpoint-01.keras  final_model.keras  training.csv
model/: CNN-LSTM.py  prediction.py
