[tool.poetry]
name = "humetrics-raw"
version = "0.1.0"
description = ""
authors = ["Joey Chen <hangghost@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.14.1"
pyqt5 = "^5.15.11"
pyqtgraph = "^0.13.7"
paho-mqtt = "^2.1.0"
pandas = "^2.2.3"
numpy = "^2.1.3"
pytz = "^2024.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
