[project]
name = "humetrics-raw"
version = "0.1.0"
description = ""
authors = [
    {name = "Joey Chen", email = "hangghost@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scipy>=1.14.1",
    "pyqt5>=5.15.11",
    "pyqtgraph>=0.13.7",
    "paho-mqtt>=2.1.0",
    "pandas>=2.2.3",
    "pytz>=2024.2",
    "numpy>=1.26.0,<2.1.0",
    "tensorflow>=2.18.0",
    "scikit-learn>=1.6.0",
    "h5py>=3.12.1",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "pymysql>=1.1.1",
    "elasticsearch>=8.17.0",
    "urllib3>=2.3.0",
    "python-dotenv>=1.0.1"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
